error.log
file:///C:/Users/hp/skillfuture/seed-team.js:83
    await setDoc(dummyRef, { referralCode: \`FF-\${dummyRef.id.substring(0, 5).toUpperCase()}\` }, { merge: true });
                                           ^

SyntaxError: Invalid or unexpected token
    at compileSourceTextModule (node:internal/modules/esm/utils:317:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:111:18)
    at #translate (node:internal/modules/esm/loader:541:20)
    at afterLoad (node:internal/modules/esm/loader:594:29)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:599:12)
    at #createModuleJob (node:internal/modules/esm/loader:623:36)
    at #getJobFromResolveResult (node:internal/modules/esm/loader:329:34)
    at ModuleLoader.getModuleJobForImport (node:internal/modules/esm/loader:294:41)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:665:25)

Node.js v25.1.0
